src/CPPParser.py
# Generated from CPPParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CPPParser ( Parser ):

    grammarFileName = "CPPParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'nullptr'", "'auto'", "'bool'", "'break'", "'cin'", 
                     "'cout'", "'case'", "'catch'", "'char'", "'const'", 
                     "'decltype'", "'default'", "'delete'", "'do'", "'double'", 
                     "'else if'", "'else'", "'enum'", "'endl'", "'explicit'", 
                     "'export'", "'extern'", "'final'", "'float'", "'for'", 
                     "'friend'", "'if'", "'int'", "'#include'", "'long'", 
                     "'main'", "'namespace'", "'return'", "'string'", "'short'", 
                     "'signed'", "'static'", "'struct'", "'switch'", "'stack'", 
                     "'size_t'", "'try'", "'typedef'", "'typeid'", "'union'", 
                     "'unsigned'", "'using'", "'void'", "'vector'", "'while'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'^'", "'&'", "'|'", "'~'", "<INVALID>", 
                     "'='", "'>>'", "'<<'", "'<'", "'>'", "'=='", "'!='", 
                     "'<='", "'>='", "<INVALID>", "<INVALID>", "'++'", "'--'", 
                     "'+='", "'-='", "'*='", "'/='", "','", "'->'", "';'", 
                     "'.'", "'\"'", "':'" ]

    symbolicNames = [ "<INVALID>", "IntegerLiteral", "FloatingLiteral", 
                      "BooleanLiteral", "PointerLiteral", "Auto", "Bool", 
                      "Break", "Cin", "Cout", "Case", "Catch", "Char", "Const", 
                      "Decltype", "Default", "Delete", "Do", "Double", "ElseIf", 
                      "Else", "Enum", "EndLine", "Explicit", "Export", "Extern", 
                      "Final", "Float", "For", "Friend", "If", "Int", "Include", 
                      "Long", "Main", "Namespace", "Return", "String", "Short", 
                      "Signed", "Static", "Struct", "Switch", "Stack", "Size_t", 
                      "Try", "Typedef", "Typeid_", "Union", "Unsigned", 
                      "Using", "Void", "Vector", "While", "LeftParen", "RightParen", 
                      "LeftBrace", "RightBrace", "LeftBrackets", "RightBrackets", 
                      "Plus", "Minus", "Star", "Div", "Mod", "Caret", "And", 
                      "Or", "Tilde", "Not", "Assign", "Stdin", "Stdout", 
                      "Less", "Greater", "Equal", "NotEqual", "LessEqual", 
                      "GreaterEqual", "AndAnd", "OrOr", "PlusPlus", "MinusMinus", 
                      "PlusEqual", "MinusEqual", "StarEqual", "DivEqual", 
                      "Comma", "Arrow", "Semi", "Dot", "DoubleQuotation", 
                      "Colon", "EscapedChar", "CharLiteral", "StringLiteral", 
                      "Identifier", "DecimalLiteral", "HexadecimalLiteral", 
                      "BinaryLiteral", "Whitespace", "BlockComment", "LineComment" ]

    RULE_program = 0
    RULE_preprocessorDirective = 1
    RULE_header = 2
    RULE_stlFileName = 3
    RULE_headFileName = 4
    RULE_includeDirective = 5
    RULE_usingDirective = 6
    RULE_declaration = 7
    RULE_mainFunctionDeclaration = 8
    RULE_functionDeclaration = 9
    RULE_paramDeclarationList = 10
    RULE_initialStatement = 11
    RULE_typeSpecifier = 12
    RULE_expression = 13
    RULE_term = 14
    RULE_factor = 15
    RULE_functionCall = 16
    RULE_functionParams = 17
    RULE_functionSrc = 18
    RULE_arrayIdentifier = 19
    RULE_argumentList = 20
    RULE_conditionSpecifier = 21
    RULE_statement = 22
    RULE_declaratorList = 23
    RULE_declarator = 24
    RULE_initializer = 25
    RULE_stlSpecifier = 26
    RULE_declarationSpecifier = 27
    RULE_flagSpecifier = 28
    RULE_inputStatement = 29
    RULE_outputStatement = 30
    RULE_conditionStatement = 31
    RULE_literal = 32
    RULE_ifWhileConditionStatement = 33
    RULE_ifWhileConditionTerm = 34
    RULE_forConditionStatement = 35
    RULE_forConditionForSTL = 36
    RULE_forConditionForCommon = 37
    RULE_iterator = 38
    RULE_returnResult = 39
    RULE_returnConditionStatement = 40
    RULE_returnConditionTerm = 41
    RULE_declarationStatement = 42
    RULE_assignStatement = 43
    RULE_ioStatement = 44
    RULE_functionCallStatement = 45
    RULE_ifStatement = 46
    RULE_elseIfStatement = 47
    RULE_elseStatement = 48
    RULE_forStatement = 49
    RULE_whileStatement = 50
    RULE_endStatement = 51
    RULE_iteratorStatement = 52
    RULE_block = 53

    ruleNames =  [ "program", "preprocessorDirective", "header", "stlFileName", 
                   "headFileName", "includeDirective", "usingDirective", 
                   "declaration", "mainFunctionDeclaration", "functionDeclaration", 
                   "paramDeclarationList", "initialStatement", "typeSpecifier", 
                   "expression", "term", "factor", "functionCall", "functionParams", 
                   "functionSrc", "arrayIdentifier", "argumentList", "conditionSpecifier", 
                   "statement", "declaratorList", "declarator", "initializer", 
                   "stlSpecifier", "declarationSpecifier", "flagSpecifier", 
                   "inputStatement", "outputStatement", "conditionStatement", 
                   "literal", "ifWhileConditionStatement", "ifWhileConditionTerm", 
                   "forConditionStatement", "forConditionForSTL", "forConditionForCommon", 
                   "iterator", "returnResult", "returnConditionStatement", 
                   "returnConditionTerm", "declarationStatement", "assignStatement", 
                   "ioStatement", "functionCallStatement", "ifStatement", 
                   "elseIfStatement", "elseStatement", "forStatement", "whileStatement", 
                   "endStatement", "iteratorStatement", "block" ]

    EOF = Token.EOF
    IntegerLiteral=1
    FloatingLiteral=2
    BooleanLiteral=3
    PointerLiteral=4
    Auto=5
    Bool=6
    Break=7
    Cin=8
    Cout=9
    Case=10
    Catch=11
    Char=12
    Const=13
    Decltype=14
    Default=15
    Delete=16
    Do=17
    Double=18
    ElseIf=19
    Else=20
    Enum=21
    EndLine=22
    Explicit=23
    Export=24
    Extern=25
    Final=26
    Float=27
    For=28
    Friend=29
    If=30
    Int=31
    Include=32
    Long=33
    Main=34
    Namespace=35
    Return=36
    String=37
    Short=38
    Signed=39
    Static=40
    Struct=41
    Switch=42
    Stack=43
    Size_t=44
    Try=45
    Typedef=46
    Typeid_=47
    Union=48
    Unsigned=49
    Using=50
    Void=51
    Vector=52
    While=53
    LeftParen=54
    RightParen=55
    LeftBrace=56
    RightBrace=57
    LeftBrackets=58
    RightBrackets=59
    Plus=60
    Minus=61
    Star=62
    Div=63
    Mod=64
    Caret=65
    And=66
    Or=67
    Tilde=68
    Not=69
    Assign=70
    Stdin=71
    Stdout=72
    Less=73
    Greater=74
    Equal=75
    NotEqual=76
    LessEqual=77
    GreaterEqual=78
    AndAnd=79
    OrOr=80
    PlusPlus=81
    MinusMinus=82
    PlusEqual=83
    MinusEqual=84
    StarEqual=85
    DivEqual=86
    Comma=87
    Arrow=88
    Semi=89
    Dot=90
    DoubleQuotation=91
    Colon=92
    EscapedChar=93
    CharLiteral=94
    StringLiteral=95
    Identifier=96
    DecimalLiteral=97
    HexadecimalLiteral=98
    BinaryLiteral=99
    Whitespace=100
    BlockComment=101
    LineComment=102

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CPPParser.EOF, 0)

        def preprocessorDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CPPParser.PreprocessorDirectiveContext)
            else:
                return self.getTypedRuleContext(CPPParser.PreprocessorDirectiveContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CPPParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CPPParser.DeclarationContext,i)


        def getRuleIndex(self):
            return CPPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CPPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7907831642853440) != 0):
                self.state = 110
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [32, 50]:
                    self.state = 108
                    self.preprocessorDirective()
                    pass
                elif token in [6, 12, 18, 27, 31, 37, 43, 44, 51, 52]:
                    self.state = 109
                    self.declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(CPPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PreprocessorDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includeDirective(self):
            return self.getTypedRuleContext(CPPParser.IncludeDirectiveContext,0)


        def usingDirective(self):
            return self.getTypedRuleContext(CPPParser.UsingDirectiveContext,0)


        def getRuleIndex(self):
            return CPPParser.RULE_preprocessorDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreprocessorDirective" ):
                listener.enterPreprocessorDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreprocessorDirective" ):
                listener.exitPreprocessorDirective(self)




    def preprocessorDirective(self):

        localctx = CPPParser.PreprocessorDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_preprocessorDirective)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.includeDirective()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.usingDirective()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Less(self):
            return self.getToken(CPPParser.Less, 0)

        def headFileName(self):
            return self.getTypedRuleContext(CPPParser.HeadFileNameContext,0)


        def Greater(self):
            return self.getToken(CPPParser.Greater, 0)

        def DoubleQuotation(self, i:int=None):
            if i is None:
                return self.getTokens(CPPParser.DoubleQuotation)
            else:
                return self.getToken(CPPParser.DoubleQuotation, i)

        def getRuleIndex(self):
            return CPPParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = CPPParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_header)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [73]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(CPPParser.Less)
                self.state = 122
                self.headFileName()
                self.state = 123
                self.match(CPPParser.Greater)
                pass
            elif token in [91]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(CPPParser.DoubleQuotation)
                self.state = 126
                self.headFileName()
                self.state = 127
                self.match(CPPParser.DoubleQuotation)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StlFileNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self):
            return self.getToken(CPPParser.String, 0)

        def Stack(self):
            return self.getToken(CPPParser.Stack, 0)

        def Vector(self):
            return self.getToken(CPPParser.Vector, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_stlFileName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlFileName" ):
                listener.enterStlFileName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlFileName" ):
                listener.exitStlFileName(self)




    def stlFileName(self):

        localctx = CPPParser.StlFileNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stlFileName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4512533159346176) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadFileNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stlFileName(self):
            return self.getTypedRuleContext(CPPParser.StlFileNameContext,0)


        def Identifier(self):
            return self.getToken(CPPParser.Identifier, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_headFileName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeadFileName" ):
                listener.enterHeadFileName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeadFileName" ):
                listener.exitHeadFileName(self)




    def headFileName(self):

        localctx = CPPParser.HeadFileNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_headFileName)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [37, 43, 52]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.stlFileName()
                pass
            elif token in [96]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(CPPParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Include(self):
            return self.getToken(CPPParser.Include, 0)

        def header(self):
            return self.getTypedRuleContext(CPPParser.HeaderContext,0)


        def getRuleIndex(self):
            return CPPParser.RULE_includeDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeDirective" ):
                listener.enterIncludeDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeDirective" ):
                listener.exitIncludeDirective(self)




    def includeDirective(self):

        localctx = CPPParser.IncludeDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_includeDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(CPPParser.Include)
            self.state = 138
            self.header()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsingDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Using(self):
            return self.getToken(CPPParser.Using, 0)

        def Namespace(self):
            return self.getToken(CPPParser.Namespace, 0)

        def Identifier(self):
            return self.getToken(CPPParser.Identifier, 0)

        def Semi(self):
            return self.getToken(CPPParser.Semi, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_usingDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsingDirective" ):
                listener.enterUsingDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsingDirective" ):
                listener.exitUsingDirective(self)




    def usingDirective(self):

        localctx = CPPParser.UsingDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_usingDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(CPPParser.Using)
            self.state = 141
            self.match(CPPParser.Namespace)
            self.state = 142
            self.match(CPPParser.Identifier)
            self.state = 143
            self.match(CPPParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainFunctionDeclaration(self):
            return self.getTypedRuleContext(CPPParser.MainFunctionDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(CPPParser.FunctionDeclarationContext,0)


        def getRuleIndex(self):
            return CPPParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = CPPParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaration)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.mainFunctionDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.functionDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainFunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationSpecifier(self):
            return self.getTypedRuleContext(CPPParser.DeclarationSpecifierContext,0)


        def Main(self):
            return self.getToken(CPPParser.Main, 0)

        def LeftParen(self):
            return self.getToken(CPPParser.LeftParen, 0)

        def RightParen(self):
            return self.getToken(CPPParser.RightParen, 0)

        def block(self):
            return self.getTypedRuleContext(CPPParser.BlockContext,0)


        def getRuleIndex(self):
            return CPPParser.RULE_mainFunctionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainFunctionDeclaration" ):
                listener.enterMainFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainFunctionDeclaration" ):
                listener.exitMainFunctionDeclaration(self)




    def mainFunctionDeclaration(self):

        localctx = CPPParser.MainFunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mainFunctionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.declarationSpecifier()
            self.state = 150
            self.match(CPPParser.Main)
            self.state = 151
            self.match(CPPParser.LeftParen)
            self.state = 152
            self.match(CPPParser.RightParen)
            self.state = 153
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationSpecifier(self):
            return self.getTypedRuleContext(CPPParser.DeclarationSpecifierContext,0)


        def Identifier(self):
            return self.getToken(CPPParser.Identifier, 0)

        def LeftParen(self):
            return self.getToken(CPPParser.LeftParen, 0)

        def RightParen(self):
            return self.getToken(CPPParser.RightParen, 0)

        def block(self):
            return self.getTypedRuleContext(CPPParser.BlockContext,0)


        def paramDeclarationList(self):
            return self.getTypedRuleContext(CPPParser.ParamDeclarationListContext,0)


        def getRuleIndex(self):
            return CPPParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = CPPParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.declarationSpecifier()
            self.state = 156
            self.match(CPPParser.Identifier)
            self.state = 157
            self.match(CPPParser.LeftParen)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 6783026952679488) != 0):
                self.state = 158
                self.paramDeclarationList()


            self.state = 161
            self.match(CPPParser.RightParen)
            self.state = 162
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclarationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initialStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CPPParser.InitialStatementContext)
            else:
                return self.getTypedRuleContext(CPPParser.InitialStatementContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(CPPParser.Comma)
            else:
                return self.getToken(CPPParser.Comma, i)

        def getRuleIndex(self):
            return CPPParser.RULE_paramDeclarationList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamDeclarationList" ):
                listener.enterParamDeclarationList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamDeclarationList" ):
                listener.exitParamDeclarationList(self)




    def paramDeclarationList(self):

        localctx = CPPParser.ParamDeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramDeclarationList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.initialStatement()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==87:
                self.state = 165
                self.match(CPPParser.Comma)
                self.state = 166
                self.initialStatement()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationSpecifier(self):
            return self.getTypedRuleContext(CPPParser.DeclarationSpecifierContext,0)


        def declaratorList(self):
            return self.getTypedRuleContext(CPPParser.DeclaratorListContext,0)


        def flagSpecifier(self):
            return self.getTypedRuleContext(CPPParser.FlagSpecifierContext,0)


        def getRuleIndex(self):
            return CPPParser.RULE_initialStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialStatement" ):
                listener.enterInitialStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialStatement" ):
                listener.exitInitialStatement(self)




    def initialStatement(self):

        localctx = CPPParser.InitialStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_initialStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13 or _la==40:
                self.state = 172
                self.flagSpecifier()


            self.state = 175
            self.declarationSpecifier()
            self.state = 176
            self.declaratorList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Int(self):
            return self.getToken(CPPParser.Int, 0)

        def Float(self):
            return self.getToken(CPPParser.Float, 0)

        def Double(self):
            return self.getToken(CPPParser.Double, 0)

        def Bool(self):
            return self.getToken(CPPParser.Bool, 0)

        def Char(self):
            return self.getToken(CPPParser.Char, 0)
